# my-journal

./: .firebaserc  firebase.json
deploy/compose/: docker-compose.dev.yml
deploy/docker/: backend.dev.Dockerfile
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: api.conf
deploy/nginx/ssl/: server.crt  server.key
src/backend/: .gitignore  main.py  pyproject.toml  requirements.txt  scratch_test.py  sync_wsgi.py
src/backend/app/: main.py  settings.py
src/backend/app/api/: dependencies.py  main.py  standard_response.py
src/backend/app/api/ai/: schemas.py  use_cases.py  views.py
src/backend/app/api/auth/: repositories.py  schemas.py  use_cases.py  views.py
src/backend/app/api/exceptions/: global_exception.py  user_exception.py
src/backend/app/api/journals/: schemas.py  use_cases.py  views.py
src/backend/app/api/notifications/: use_cases.py  views.py
src/backend/app/config/env/: .env.production.example  env.example
src/backend/app/connections/: firebase.py
src/backend/app/middleware/: access_log.py  cors.py  csrf.py  nonce.py  rate_limit.py  request_id.py  security_headers.py
src/backend/app/services/email/: sender.py
src/backend/app/services/email/templates/: otp_email.html  styles.css
src/frontend/: .env.example  README.md  metadata.json  pubspec.yaml
src/frontend/android/app/: build.gradle.kts  google-services.json
src/frontend/app/: build.gradle.kts
src/frontend/gradle/: libs.versions.toml
src/frontend/ios/Runner/: Info.plist
src/frontend/lib/: app.dart  firebase_options.dart  main.dart
(+78 files in other folders)
