[tool.poetry]
name = "my-journal-backend"
version = "0.1.0"
description = "Backend for MyJournal offline-first application"
authors = ["Heru Purnomo <herupurnomo.id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
firebase-admin = "^6.2.0"
python-dotenv = "^1.0.0"
cachetools = "^5.3.2"
PyJWT = "^2.8.0"
google-generativeai = "^0.5.4"
fpdf2 = "^2.7.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
